# Soroban-Cookbook-

./: .clippy.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  phase 8 issues.md
.github/workflows/: deploy-docs.yml  fuzz.yml  test.yml
book/src/: SUMMARY.md
docs/: README.md  benchmarks.html
examples/advanced/: README.md
examples/advanced/03-data-aggregation-oracle/src/: lib.rs  test.rs
examples/advanced/06-beacon-management/src/: lib.rs
examples/basics/: README.md
examples/basics/01-hello-world/: README.md
examples/basics/03-authentication/src/: test.rs
examples/basics/06-type-conversions/src/: lib.rs  test.rs
examples/basics/06-validation-patterns/src/: lib.rs
examples/basics/10-data-types/src/: lib.rs
examples/defi/: README.md
examples/defi/01-simple-swap/: Cargo.toml
examples/defi/01-simple-swap/src/: lib.rs  test.rs
examples/defi/03-amm-price-oracle/: Cargo.toml
examples/defi/03-amm-price-oracle/src/: lib.rs  test.rs
examples/governance/: README.md
examples/nfts/01-basic-nft/src/: lib.rs
examples/tokens/: README.md
scripts/: README.md  test.sh
tests/integration/: Cargo.toml  README.md
tests/integration/tests/: governance_tests.rs  integration_tests.rs
