[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-validation = { path = "../../shared" }
hello-world = { path = "../../examples/basics/01-hello-world" }
storage-patterns = { path = "../../examples/basics/02-storage-patterns" }
authentication = { path = "../../examples/basics/03-authentication" }
custom_errors = { path = "../../examples/basics/03-custom-errors", package = "custom-errors" }
validation_patterns = { path = "../../examples/basics/06-validation-patterns", package = "validation-patterns" }
events-counter = { path = "../../examples/basics/events", package = "events_example" }
ajo_factory = { path = "../../examples/intermediate/ajo-factory", package = "ajo-factory" }
multi_sig_patterns = { path = "../../examples/intermediate/multi-sig-patterns", package = "multi-sig-patterns" }
multi-party-auth = { path = "../../examples/advanced/01-multi-party-auth" }
timelock = { path = "../../examples/advanced/02-timelock" }
batch-operations = { path = "../../examples/advanced/08-batch-operations" }
proposal-validation = { path = "../../examples/governance/01-proposal-validation" }
custom-errors = { path = "../../examples/basics/03-custom-errors" }
events_structured = { path = "../../examples/basics/04-events", package = "events" }
validation-patterns = { path = "../../examples/basics/06-validation-patterns" }
ajo = { path = "../../examples/intermediate/ajo" }
ajo-factory = { path = "../../examples/intermediate/ajo-factory" }
multi-sig-patterns = { path = "../../examples/intermediate/multi-sig-patterns" }
multi-party-auth = { path = "../../examples/advanced/01-multi-party-auth" }
timelock = { path = "../../examples/advanced/02-timelock" }
token-wrapper = { path = "../../examples/tokens/token-wrapper" }
